# scandemoNew

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-armv7.yml  rauc.yml
scripts/: run_device.sh
src/: main.rs
ui/: main.qml
